AUTOMAKE_OPTIONS=foreign
noinst_LIBRARIES=libutil.a
#libutil_a_SOURCES=v_string.c sf_hash.c md5.c mempool.c MiscDecoder.c urlcode.c base64.c list_n.c
libutil_a_SOURCES=v_string.c sf_hash.c analyzer_log.c md5.c mempool.c urlcode.c base64.c list_n.c
AM_CPPFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/client_src -I$(top_srcdir)/client_src/decode -I/usr/include/libxml2
AM_CFLAGS=-g -O2 -D_REENTRANT
